feat(group): create group with ethereum address
