# assets/docs/swagger.json
@@ -36,7 +36,19 @@
                     "200": {
                         "description": "Response success",
                         "schema": {
-                            "$ref": "#/definitions/app.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/app.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/model.GroupDetail"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -154,16 +166,58 @@
         "model.GroupCreateReq": {
             "type": "object",
             "required": [
+                "category",
                 "name"
             ],
             "properties": {
-                "intro": {
+                "category": {
+                    "description": "group's category",
                     "type": "string"
+                },
+                "intro": {
+                    "description": "group intro",
+                    "type": "string"
+                },
+                "maxMembers": {
+                    "description": "group's max members",
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string",
                     "maxLength": 20,
                     "minLength": 2
+                },
+                "public": {
+                    "description": "`true` create public group, `false` create private group",
+                    "type": "boolean"
+                }
+            }
+        },
+        "model.GroupDetail": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "intro": {
+                    "type": "string"
+                },
+                "membersMax": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "owner": {
+                    "description": "group is belongs to current member",
+                    "type": "boolean"
+                },
+                "public": {
+                    "description": "group is public or private",
+                    "type": "boolean"
                 }
             }
         },
